--- a/src/index.css
+++ b/src/index.css
@@ -5,14 +5,14 @@ body {
   margin: 0;
 }
 h1 {
-  font-size: 2em;
+  font-size: 2.1em;
   padding-top: 5px;
   margin: 5px 0 0 0;
   color: #333;
 }
 h2 {
   border-bottom: 1px solid rgb(201, 208, 207);
-  font-size: 1em;
+  font-size: 1.05em;
   font-weight: 600;
   color: rgb(80, 109, 109);
   padding-bottom: 10px;
@@ -20,8 +20,10 @@ h2 {
 }
 h3 {
   font-size: 1em;
+  font-weight: lighter;
   padding-bottom: 10px;
-  margin: 10px 0 5px 0;
+  margin: 10px 0 10px 0;
+  color: rgb(62, 77, 76);
 }
 button {
   background-color: teal;
@@ -31,13 +33,14 @@ button {
 }
 .Mode {
   background-color: darkslategray;
-  min-width: 420px;
+  min-width: 580px;
   width:auto;
   display: inline-block;
   color: whitesmoke;
   border: 2px solid black;
-  margin: 10px 0 20px 0;
+  margin: 10px 0 10px 0;
   padding: 2px 2px 2px 2px;
+  text-align: center;
 }
 
 /* rows */
